fix: update scrollbar color

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -39,7 +39,7 @@ $font-titles : 'Passions Conflict', cursive;
   &::-webkit-scrollbar-thumb {
     // border-radius: 10px;
     box-shadow: inset 0 0 6px rgba(44, 44, 44,0.3);
-    background-color: $color-red;
+    background-color: white;
   }
   
   &::-webkit-scrollbar-track {
